--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-tradingview-widget": "^1.3.2",
     "sass-loader": "^12.0.0"
   },
   "scripts": {
