--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sass-loader": "^12.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
