--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "ag-grid-community": "^25.3.0",
     "ag-grid-react": "^25.3.0",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "formik": "^2.2.9",
     "node-sass": "^6.0.0",
